Adding incomplete code

--- a/index.html
+++ b/index.html
@@ -1,45 +1,74 @@
+    <!-- declaration and head -->
 <!DOCTYPE html>
 <html lang="en-gb">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Abdullah Bhatti's Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="./images/headicon.ico">
+    <link rel="stylesheet" href="./css/style.css" href="./css/images/" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Lernantino // Web Developer</title>
-  <link rel="stylesheet" href="./assets/css/style.css" />
-</head>
+  <body>
+    <!-- navbar and title -->
+    <header class="header">
+      <h1>Abdullah Bhatti</h1>
+      <nav class="navbar">
+        <ul>
+          <li><a href="#biography">Biography</a></li>
+          <li><a href="#pastprojects">Past Projects</a></li>
+          <li><a href="#contactpage">Get in touch</a></li>
+        </ul>
+      </nav>
+    </header>
 
-<body>
-  <!-- main logo / nav -->
-  <header>
-    <h1>Lernantino</h1>
-    <nav>
-    </nav>
-  </header>
-
-  <!-- hero banner -->
-  <section class="hero-banner">
-    <div>
-      <h2>Cool subtitle here!</h2>
-    </div>
-  </section>
-
-  <main class="page-wrapper">
-    <!-- about me -->
-    <section class="page-section" id="about">
-      <h2>About Me</h2>
+    <!-- banner -->
+    <section class="hero-banner">
+      <h2>Web Developer/Front-End Engineer</h2>
     </section>
 
-    <!-- portfolio container -->
-    <section class="page-section" id="work">
-      <h2>Work</h2>
-    </section>
+    <main class="page-wrapper">
+      <!-- bio -->
+      <section class="page-section" id="bio">
+        <h3>Biography</h3>
+        <div class="info">
+          <p>
+            I have been interested in tech since I was very young, building my first computer at 12 and beginning to learn Python at the age of 13. I am currently learning Javascript and C# too. I love seeing problems and thinking about solutions in a logical, methodical way. I also love gaming and would love to code my own video game in Unity someday. I have been interested in tech since I was very young, building my first computer at 12 and beginning to learn Python at the age of 13. I am currently learning Javascript and C# too. I love seeing problems and thinking about solutions in a logical, methodical way. I also love gaming and would love to code my own video game in Unity someday. I have been interested in tech since I was very young, building my first computer at 12 and beginning to learn Python at the age of 13. I am currently learning Javascript and C# too. I love seeing problems and thinking about solutions in a logical, methodical way. I also love gaming and would love to code my own video game in Unity someday. I have been interested in tech since I was very young, building my first computer at 12 and beginning to learn Python at the age of 13. I am currently learning Javascript and C# too. I love seeing problems and thinking about solutions in a logical, methodical way. I also love gaming and would love to code my own video game in Unity someday. I have been interested in tech since I was very young, building my first computer at 12 and beginning to learn Python at the age of 13. I am currently learning Javascript and C# too. I love seeing problems and thinking about solutions in a logical, methodical way. I also love gaming and would love to code my own video game in Unity someday. I have been interested in tech since I was very young, building my first computer at 12 and beginning to learn Python at the age of 13. I am currently learning Javascript and C# too. I love seeing problems and thinking about solutions in a logical, methodical way. I also love gaming and would love to code my own video game in Unity someday.
+          </p>
+        </div>
+      </section>
 
-    <!-- contact -->
-    <section class="page-section contact" id="contact">
-      <h2>Contact Me</h2>
-    </section>
-  </main>
-</body>
+      <!-- portfolio -->
+      <section class="page-section" id="work">
+        <h3>Work</h3>
+        <div class="info">
+          <a href="http://" target="_blank" rel="noopener noreferrer">
+            <div class="picture-one">
+              <img src="./css/images/02-portfolio-3.jpg" alt="" />
+              <div class="title">
+                <h4>Title</h4>
+              </div>
+            </div>
+          </a>
+        </div>
+      </section>
 
+      <!-- contact -->
+      <footer class="page-section contact" id="contact">
+        <h3>Get in touch</h3>
+        <div class="info">
+          <div class="contact-info">
+            <ul>
+              <li>
+                <a href="abdullahusayd@outlook.com" target="_blank">Email me!</a>
+              </li>
+              <li>
+                <a href="https://github.com/abzycake" target="_blank">My Github</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </footer>
+    </main>
+  </body>
 </html>
