Updated CSS to fix alignment issues.

--- a/index.html
+++ b/index.html
@@ -33,26 +33,11 @@
         <h3>Biography</h3>
         <div class="info">
           <p>
-            I have been interested in tech since I was very young, building my first computer at 12 and beginning to learn Python at the age of 13. I am currently learning Javascript and C# too. I love seeing problems and thinking about solutions in a logical, methodical way. I also love gaming and would love to code my own video game in Unity someday. I have been interested in tech since I was very young, building my first computer at 12 and beginning to learn Python at the age of 13. I am currently learning Javascript and C# too. I love seeing problems and thinking about solutions in a logical, methodical way. I also love gaming and would love to code my own video game in Unity someday. I have been interested in tech since I was very young, building my first computer at 12 and beginning to learn Python at the age of 13. I am currently learning Javascript and C# too. I love seeing problems and thinking about solutions in a logical, methodical way. I also love gaming and would love to code my own video game in Unity someday. I have been interested in tech since I was very young, building my first computer at 12 and beginning to learn Python at the age of 13. I am currently learning Javascript and C# too. I love seeing problems and thinking about solutions in a logical, methodical way. I also love gaming and would love to code my own video game in Unity someday. I have been interested in tech since I was very young, building my first computer at 12 and beginning to learn Python at the age of 13. I am currently learning Javascript and C# too. I love seeing problems and thinking about solutions in a logical, methodical way. I also love gaming and would love to code my own video game in Unity someday. I have been interested in tech since I was very young, building my first computer at 12 and beginning to learn Python at the age of 13. I am currently learning Javascript and C# too. I love seeing problems and thinking about solutions in a logical, methodical way. I also love gaming and would love to code my own video game in Unity someday.
+            From a young age, my fascination with technology has been an intrinsic part of my journey. I vividly remember the thrill of assembling my first computer at the age of 12, sparking a relentless curiosity for the inner workings of hardware and software. That initial fascination led me to dive into the world of programming, with Python becoming my gateway into the realm of coding at the tender age of 13. As the years progressed, my passion only intensified, propelling me to explore a diverse array of programming languages. Currently, I am dedicatedly immersing myself in the intricacies of Javascript and C#, recognizing their immense potential in powering web development and software creation. What truly captivates me about coding is the methodical approach it demands – the logical thinking required to dissect problems and devise systematic solutions. It's a puzzle I eagerly solve, relishing the challenge of breaking down complex issues into manageable components. Beyond programming, my affection for gaming has been a constant companion. It's not merely about playing; it's about understanding the intricate mechanics that make games tick. This passion ignites a dream within me – the dream of crafting my own video game using Unity. To me, game development represents the perfect synergy of creativity and technical prowess. I yearn to weave together my coding skills with imaginative concepts to birth a digital world of my own creation. This aspiration fuels my determination to absorb all facets of game design and development, propelling me forward in my quest to realize this dream.
           </p>
         </div>
       </section>
-
-      <!-- portfolio -->
-      <section class="page-section" id="work">
-        <h3>Work</h3>
-        <div class="info">
-          <a href="http://" target="_blank" rel="noopener noreferrer">
-            <div class="picture-one">
-              <img src="./css/images/02-portfolio-3.jpg" alt="" />
-              <div class="title">
-                <h4>Title</h4>
-              </div>
-            </div>
-          </a>
-        </div>
-      </section>
-
+      
       <!-- contact -->
       <footer class="page-section contact" id="contact">
         <h3>Get in touch</h3>
